syntax = "proto3";

import "ZoneOpDescriptor.proto";

message OpStackDescriptor {
	uint32 dimension_x = 1;
	uint32 dimension_y = 2;
	uint32 focus_index = 3;
	repeated ZoneOpDescriptor ops = 4;
}